--- a/record-sync-libraries/python/distro/deb/debian/changelog
+++ b/record-sync-libraries/python/distro/deb/debian/changelog
@@ -1,5 +1,12 @@
+python-jh-recsynclib (0.2.0-1) UNRELEASED; urgency=medium
+
+  * hard code support for jazzhands_legacy
+
+ -- Todd Kover <kovert@omniscient.com>  Fri,  3 Apr 2020 16:39:00 -0500
+
 python-jh-recsynclib (0.1.0-1) UNRELEASED; urgency=medium
 
   * Initial Release
 
  -- Ryan D Williams <rdw@drws-office.com>  Fri, 13 Oct 2017 15:00:00 -0400
+
